@@ -1,3 +1,9 @@
+2004-10-07  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* glines.c (game_new_callback): Implement Anton Gavrilov's
+	suggestion to start a new game when the scores window is closed
+	(bug #154542).
+
 2004-09-09  callum  <callum@spooky-possum.org>
 
 	* help/C/glines.xml: Bumped the version number.
